syntax = "proto3";
package multistaking.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/realiotech/multi-staking/x/multi-staking/types";

message MultiStakingLock {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  //   option (gogoproto.goproto_stringer) = false;

  string conversion_ratio = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string locked_amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string del_addr = 3;
  string val_addr = 4;
};

message ValidatorAllowedToken {
  string val_addr = 1;
  string token_denom = 2;
}

message UnbondedMultiStaking {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  // delegator_address is the bech32-encoded address of the delegator.
  string delegator_address = 1
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // validator_address is the bech32-encoded address of the validator.
  string validator_address = 2
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  repeated UnbonedMultiStakingEntry entries = 3
      [ (gogoproto.nullable) = false ];
}

message UnbonedMultiStakingEntry {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  // creation_height is the height which the unbonding took place.
  int64 creation_height = 1;
  // completion_time is the unix time for unbonding completion.
  google.protobuf.Timestamp completion_time = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];

  string conversion_ratio = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];

  string initial_balance = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];

  string balance = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
